[gd_scene load_steps=7 format=3 uid="uid://dmbulkoxdvoes"]

[ext_resource type="Script" path="res://Table.gd" id="1_jch7l"]
[ext_resource type="Script" path="res://addons/SmoothScroll/SmoothScrollContainer.gd" id="1_ukorq"]
[ext_resource type="PackedScene" uid="uid://c2v8yme3btu6f" path="res://table_item.tscn" id="2_iag7c"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wy7ob"]
bg_color = Color(0.212305, 0.212305, 0.212305, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vfoa1"]
content_margin_left = 5.0
content_margin_right = 5.0
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_l40fq"]
bg_color = Color(0.364706, 0.364706, 0.364706, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_jch7l")

[node name="PanelTable" type="Panel" parent="."]
custom_minimum_size = Vector2(350, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_wy7ob")
metadata/_edit_vertical_guides_ = [325.0]

[node name="VBoxContainer" type="VBoxContainer" parent="PanelTable"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="MarginContainerSearch" type="MarginContainer" parent="PanelTable/VBoxContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10

[node name="SearchField" type="LineEdit" parent="PanelTable/VBoxContainer/MarginContainerSearch"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.0705882, 0.0705882, 0.0705882, 1)
theme_override_colors/font_placeholder_color = Color(0.212305, 0.212305, 0.212305, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_vfoa1")
theme_override_styles/focus = SubResource("StyleBoxFlat_vfoa1")
text = "фывфывфыв"
placeholder_text = "Поиск..."
select_all_on_focus = true
caret_blink = true
caret_blink_interval = 0.5

[node name="MarginContainer" type="MarginContainer" parent="PanelTable/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 5

[node name="Panel" type="Panel" parent="PanelTable/VBoxContainer/MarginContainer"]
clip_contents = true
layout_mode = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_l40fq")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelTable/VBoxContainer/MarginContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/separation = 2

[node name="SmoothScrollContainer" type="ScrollContainer" parent="PanelTable/VBoxContainer/MarginContainer/Panel/VBoxContainer"]
clip_contents = false
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2
follow_focus = true
script = ExtResource("1_ukorq")

[node name="MarginContainer" type="MarginContainer" parent="PanelTable/VBoxContainer/MarginContainer/Panel/VBoxContainer/SmoothScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="ItemsContainer" type="VBoxContainer" parent="PanelTable/VBoxContainer/MarginContainer/Panel/VBoxContainer/SmoothScrollContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
metadata/_edit_group_ = true

[node name="TableItem" parent="PanelTable/VBoxContainer/MarginContainer/Panel/VBoxContainer/SmoothScrollContainer/MarginContainer/ItemsContainer" instance=ExtResource("2_iag7c")]
layout_mode = 2
metadata/_edit_vertical_guides_ = [298.0]

[node name="TableItem2" parent="PanelTable/VBoxContainer/MarginContainer/Panel/VBoxContainer/SmoothScrollContainer/MarginContainer/ItemsContainer" instance=ExtResource("2_iag7c")]
layout_mode = 2
metadata/_edit_vertical_guides_ = [298.0]

[node name="TableItem3" parent="PanelTable/VBoxContainer/MarginContainer/Panel/VBoxContainer/SmoothScrollContainer/MarginContainer/ItemsContainer" instance=ExtResource("2_iag7c")]
layout_mode = 2
metadata/_edit_vertical_guides_ = [298.0]

[node name="TableItem4" parent="PanelTable/VBoxContainer/MarginContainer/Panel/VBoxContainer/SmoothScrollContainer/MarginContainer/ItemsContainer" instance=ExtResource("2_iag7c")]
layout_mode = 2
metadata/_edit_vertical_guides_ = [298.0]

[node name="TableItem5" parent="PanelTable/VBoxContainer/MarginContainer/Panel/VBoxContainer/SmoothScrollContainer/MarginContainer/ItemsContainer" instance=ExtResource("2_iag7c")]
layout_mode = 2
metadata/_edit_vertical_guides_ = [298.0]

[node name="TableItem6" parent="PanelTable/VBoxContainer/MarginContainer/Panel/VBoxContainer/SmoothScrollContainer/MarginContainer/ItemsContainer" instance=ExtResource("2_iag7c")]
layout_mode = 2
metadata/_edit_vertical_guides_ = [298.0]

[node name="TableItem7" parent="PanelTable/VBoxContainer/MarginContainer/Panel/VBoxContainer/SmoothScrollContainer/MarginContainer/ItemsContainer" instance=ExtResource("2_iag7c")]
layout_mode = 2
metadata/_edit_vertical_guides_ = [298.0]

[node name="TableItem8" parent="PanelTable/VBoxContainer/MarginContainer/Panel/VBoxContainer/SmoothScrollContainer/MarginContainer/ItemsContainer" instance=ExtResource("2_iag7c")]
layout_mode = 2
metadata/_edit_vertical_guides_ = [298.0]

[node name="TableItem9" parent="PanelTable/VBoxContainer/MarginContainer/Panel/VBoxContainer/SmoothScrollContainer/MarginContainer/ItemsContainer" instance=ExtResource("2_iag7c")]
layout_mode = 2
metadata/_edit_vertical_guides_ = [298.0]

[node name="TableItem10" parent="PanelTable/VBoxContainer/MarginContainer/Panel/VBoxContainer/SmoothScrollContainer/MarginContainer/ItemsContainer" instance=ExtResource("2_iag7c")]
layout_mode = 2
metadata/_edit_vertical_guides_ = [298.0]

[node name="TableItem11" parent="PanelTable/VBoxContainer/MarginContainer/Panel/VBoxContainer/SmoothScrollContainer/MarginContainer/ItemsContainer" instance=ExtResource("2_iag7c")]
layout_mode = 2
metadata/_edit_vertical_guides_ = [298.0]

[node name="TableItem12" parent="PanelTable/VBoxContainer/MarginContainer/Panel/VBoxContainer/SmoothScrollContainer/MarginContainer/ItemsContainer" instance=ExtResource("2_iag7c")]
layout_mode = 2
metadata/_edit_vertical_guides_ = [298.0]

[node name="TableItem13" parent="PanelTable/VBoxContainer/MarginContainer/Panel/VBoxContainer/SmoothScrollContainer/MarginContainer/ItemsContainer" instance=ExtResource("2_iag7c")]
layout_mode = 2
metadata/_edit_vertical_guides_ = [298.0]

[node name="TableItem14" parent="PanelTable/VBoxContainer/MarginContainer/Panel/VBoxContainer/SmoothScrollContainer/MarginContainer/ItemsContainer" instance=ExtResource("2_iag7c")]
layout_mode = 2
metadata/_edit_vertical_guides_ = [298.0]

[node name="TableItem15" parent="PanelTable/VBoxContainer/MarginContainer/Panel/VBoxContainer/SmoothScrollContainer/MarginContainer/ItemsContainer" instance=ExtResource("2_iag7c")]
layout_mode = 2
metadata/_edit_vertical_guides_ = [298.0]

[node name="TableItem16" parent="PanelTable/VBoxContainer/MarginContainer/Panel/VBoxContainer/SmoothScrollContainer/MarginContainer/ItemsContainer" instance=ExtResource("2_iag7c")]
layout_mode = 2
metadata/_edit_vertical_guides_ = [298.0]

[node name="TableItem17" parent="PanelTable/VBoxContainer/MarginContainer/Panel/VBoxContainer/SmoothScrollContainer/MarginContainer/ItemsContainer" instance=ExtResource("2_iag7c")]
layout_mode = 2
metadata/_edit_vertical_guides_ = [298.0]

[node name="TableItem18" parent="PanelTable/VBoxContainer/MarginContainer/Panel/VBoxContainer/SmoothScrollContainer/MarginContainer/ItemsContainer" instance=ExtResource("2_iag7c")]
layout_mode = 2
metadata/_edit_vertical_guides_ = [298.0]

[node name="TableItem19" parent="PanelTable/VBoxContainer/MarginContainer/Panel/VBoxContainer/SmoothScrollContainer/MarginContainer/ItemsContainer" instance=ExtResource("2_iag7c")]
layout_mode = 2
metadata/_edit_vertical_guides_ = [298.0]

[node name="TableItem20" parent="PanelTable/VBoxContainer/MarginContainer/Panel/VBoxContainer/SmoothScrollContainer/MarginContainer/ItemsContainer" instance=ExtResource("2_iag7c")]
layout_mode = 2
metadata/_edit_vertical_guides_ = [298.0]

[node name="TableItem21" parent="PanelTable/VBoxContainer/MarginContainer/Panel/VBoxContainer/SmoothScrollContainer/MarginContainer/ItemsContainer" instance=ExtResource("2_iag7c")]
layout_mode = 2
metadata/_edit_vertical_guides_ = [298.0]

[node name="TableItem22" parent="PanelTable/VBoxContainer/MarginContainer/Panel/VBoxContainer/SmoothScrollContainer/MarginContainer/ItemsContainer" instance=ExtResource("2_iag7c")]
layout_mode = 2
metadata/_edit_vertical_guides_ = [298.0]

[node name="Panel" type="Panel" parent="PanelTable/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
mouse_filter = 2

[node name="ButtonAddLog" type="Button" parent="PanelTable/VBoxContainer/Panel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
tooltip_text = "Должно содержаться в буфере обмена"
focus_mode = 0
mouse_filter = 1
text = "Добавить логи"

[node name="WindowItemInfo" type="Window" parent="."]
initial_position = 2
visible = false
transient = true
unresizable = true
